<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settingsTitle">

    <ListPreference
        android:defaultValue="@string/settingsOrderByDefault"
        android:entries="@array/settingsOrderByLabels"
        android:entryValues="@array/settingsOrderByValues"
        android:key="@string/settingsOrderByKey"
        android:title="@string/settingsOrderByLabel" />

    <EditTextPreference
        android:defaultValue="@string/settingsDateFromDefault"
        android:inputType="date"
        android:key="@string/settingsDateFromKey"
        android:selectAllOnFocus="true"
        android:title="@string/settingsDateFromLabel" />

    <EditTextPreference
        android:defaultValue="@string/settingsDateToDefault"
        android:inputType="date"
        android:key="@string/settingsDateToKey"
        android:selectAllOnFocus="true"
        android:title="@string/settingsDateToLabel" />

</PreferenceScreen>